kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: advent-of-code-leaderboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: advent-of-code-leaderboard
  template:
    metadata:
      labels:
        app: advent-of-code-leaderboard
    spec:
      containers:
        - name: advent-of-code-leaderboard
          image: inseefrlab/adventofcodeleaderboard
