kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: advent-of-code-leaderboard
spec:
  ports:
    - name: http
      targetPort: 8080
      port: 80
  selector:
    app: advent-of-code-leaderboard
